--- a/public/devicepage.html
+++ b/public/devicepage.html
@@ -6,6 +6,7 @@
   <title>Device Details</title>
   <link rel="stylesheet" href="styles.css">
   <script src="device.js" defer></script>
+  <script src="visibility.js" defer></script>
 </head>
 <body>
   <div id="device-container">
