--- a/public/devicepage.html
+++ b/public/devicepage.html
@@ -1,89 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+  
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Device Details</title>
-  <link rel="stylesheet" href="styles.css">
-  <script src="device.js" defer></script>
-  <script src="visibility.js" defer></script>
+  <title>Device Page</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
+
 <body>
-  <div id="device-container">
-    <h3>Device ID: <span id="device-id"></span></h3>
-    <h4>Location: <span id="location"></span></h4>
-    <h4>Date: <span id="date"></span></h4>
-
-    <div id="graph">
-      <!-- Sensor graph will be rendered here -->
+  <div class="app-container">
+    <!-- Real-time Device Information -->
+    <div class="device-info">
+      <p><strong>Device ID:</strong> <span id="deviceId">Loading...</span></p>
+      <p><strong>Location:</strong> <span id="deviceLocation">Loading...</span></p>
+      <p><strong>Date:</strong> <span id="deviceDate">Loading...</span></p>
     </div>
 
-    <div id="actions">
-        <button id="setup-alert">Set Up Alert</button>
-        <button id="report-issue">Report an Issue</button>
-    </div>
-      
-    <div id="alert-form" class="hidden">
-        <form id="alert-setup-form">
-          <ul style="list-style-type: none; padding: 0;">
-            <li>
-              <label>
-                Temperature (°C):
-                <input type="number" name="temp-min" placeholder="Min">
-                <input type="number" name="temp-max" placeholder="Max">
-              </label>
-            </li>
-            <li>
-              <label>
-                Humidity (%):
-                <input type="number" name="humidity-min" placeholder="Min">
-                <input type="number" name="humidity-max" placeholder="Max">
-              </label>
-            </li>
-            <li>
-              <label>
-                Flame (Binary):
-                <input type="number" name="flame-min" placeholder="Min">
-                <input type="number" name="flame-max" placeholder="Max">
-              </label>
-            </li>
-            <li>
-              <label>
-                CO (ppm):
-                <input type="number" name="co-min" placeholder="Min">
-                <input type="number" name="co-max" placeholder="Max">
-              </label>
-            </li>
-          </ul>
-          <button type="submit">Save</button>
-          <button type="button" id="cancel-alert">Cancel</button>
-        </form>
-    </div>
-      
-    <div id="issue-form" class="hidden">
-        <form id="issue-report-form">
-            <li>
-                <label>
-                    Device ID: <input type="text" id="issue-device-id" readonly>
-                </label>
-            </li>
-            <li>
-                <label>
-                    Location: <input type="text" id="issue-location" readonly>
-                </label>
-            </li>
-            <li>
-                <label>
-                    Issue: <textarea id="issue-description" placeholder="Describe the issue"></textarea>
-                </label>
-            </li>
-
-          <button type="submit">Send</button>
-          <button type="button" id="cancel-issue">Cancel</button>
-        </form>
+    <!-- Graph Container -->
+    <div class="chart-container">
+      <canvas id="sensorGraph"></canvas>
     </div>
 
-    <button id="back-to-map">Back to the Map</button>
+    <!-- Buttons -->
+    <div class="button-container">
+      <button class="alert-button green" onclick="toggleForm('alertForm')">Set Up Alert</button>
+      <button class="alert-button orange" onclick="toggleForm('issueForm')">Report an Issue</button>
+    </div>
+
+    <!-- Alert Form -->
+    <form id="alertForm" class="hidden form-container">
+      <h3>Enter the min and max values for each parameter:</h3>
+      <div class="form-row">
+        <label>Temperature [°C]:</label>
+        <input type="number" name="temp_min" placeholder="Min" required>
+        <span>-</span>
+        <input type="number" name="temp_max" placeholder="Max" required>
+      </div>
+      <div class="form-row">
+        <label>Humidity [%]:</label>
+        <input type="number" name="humidity_min" placeholder="Min" required>
+        <span>-</span>
+        <input type="number" name="humidity_max" placeholder="Max" required>
+      </div>
+      <div class="form-row">
+        <label>Flame:</label>
+        <input type="number" name="flame_min" placeholder="Min" required>
+        <span>-</span>
+        <input type="number" name="flame_max" placeholder="Max" required>
+      </div>
+      <div class="form-row">
+        <label>CO [ppm]:</label>
+        <input type="number" name="co_min" placeholder="Min" required>
+        <span>-</span>
+        <input type="number" name="co_max" placeholder="Max" required>
+      </div>
+      <div class="button-container">
+        <button type="submit" class="alert-button green">Save</button>
+        <button type="button" class="alert-button red" onclick="toggleForm('alertForm')">Cancel</button>
+      </div>
+    </form>    
+
+    <!-- Issue Form -->
+    <form id="issueForm" class="hidden form-container">
+      <h3>Report the issue below:</h3>
+      <label>Device ID:</label>
+      <input type="text" name="device_id" id="issueDeviceId" readonly><br>
+      <label>Location:</label>
+      <input type="text" name="location" id="issueDeviceLocation" readonly><br>
+      <label>Issue:</label>
+      <textarea name="issue" placeholder="Describe the issue..."></textarea><br>
+      <div class="button-container">
+        <button type="submit" class="alert-button green">Send</button>
+        <button type="button" class="alert-button red" onclick="toggleForm('issueForm')">Cancel</button>
+      </div>
+    </form>
+
+    <!-- Back to Map -->
+    <button class="alert-button back" onclick="window.location.href='index.html'">Back to the map</button>
   </div>
+
+  <script src="js/device.js"></script>
 </body>
 </html>
