--- a/public/index.html
+++ b/public/index.html
@@ -3,19 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Wildfire Detection</title>
-  <link rel="stylesheet" href="styles.css">
-  <script src="map.js" defer></script>
+  <title>Wildfire Detector</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 </head>
 <body>
-  <div id="map-container">
+  <div class="app-container">
     <div id="map"></div>
-    <button id="urgency-alert" class="alert-btn">Send Urgency Alert</button>
-    <div id="alerts">
+    <button class="alert-button" onclick="sendUrgencyAlert()">Send Urgency Alert</button>
+    <div class="alerts">
       <p>Alert: Humidity below 5%</p>
       <p>Alert: Temperature above 60°C</p>
       <p>Alert: High Fire Risk near zone 1</p>
     </div>
   </div>
+
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
